# aiidalab-widgets-base

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  aiida_datatypes.ipynb  aiida_datatypes_viewers.ipynb  cod.ipynb  codes.ipynb  codes_computers.ipynb  eln.ipynb  eln_configure.ipynb  eln_import.ipynb  install.sh  metadata.json  process.ipynb  process_list.ipynb  pyproject.toml  setup.cfg  setup.json  setup.py  setup_code.ipynb  setup_computer.ipynb  start.py  structures.ipynb  structures_multi.ipynb  test-rtd.sh  tox.ini  wizard_apps.ipynb  workflows.ipynb
.github/: release.yml
.github/actions/integration-tests/: action.yml
.github/workflows/: ci.yml  di-docker.yml  publish.yml
aiida_widgets/: __init__.py  codes.py  structures.py  structures_multi.py
aiidalab_widgets_base/: __init__.py  aiida_viewers.py  aiida_visualizers.py  bug_report.py  codes.py  computational_resources.py  computers.py  crystal_sim_crystal.py  databases.py  dicts.py  display.py  elns.py  export.py  infobox.py  loaders.py  metadata.py  misc.py  nodes.py  process.py  representations.py  search_qb.py  structure_browser.py  structures.py  structures_multi.py  submit_button.py  viewers.py  weas.py  wizard.py  workflows.py
aiidalab_widgets_base/data/: __init__.py
aiidalab_widgets_base/static/styles/: README.md  global.css  infobox.css  test.css
aiidalab_widgets_base/static/styles/scss/: global.scss  infobox.scss
aiidalab_widgets_base/utils/: __init__.py  exceptions.py  loaders.py
docker/: Dockerfile  docker-bake.hcl
docs/: .gitignore  Makefile
docs/source/: conf.py  index.rst  installation.rst  ipywidgets_docs_utils.py  nitpick-exceptions
docs/source/contribute/: index.rst
docs/source/introduction/: index.rst
docs/source/widget-list/: aiida_viewers.rst  codes.rst  computers.rst  databases.rst  export.rst  index.rst  nodes.rst  processes.rst  structures.rst
notebooks/: aiida_datatypes_viewers.ipynb  codes_computers.ipynb  computational_resources.ipynb  eln_configure.ipynb  eln_import.ipynb  nodes.ipynb  process.ipynb  process_list.ipynb  setup_code.ipynb  setup_computer.ipynb  structures.ipynb  structures_multi.ipynb  test.ipynb  test_misc.ipynb  viewers.ipynb  wizard_apps.ipynb
tests/: Dockerfile  conftest.py  test_bug_report.py  test_computational_resources.py  test_databases.py  test_elns.py  test_export.py  test_infobox.py  test_loaders.py  test_nodes.py  test_notebooks.py  test_process.py  test_structures.py  test_utils.py  test_viewers.py  test_wizard.py
tests_notebooks/: conftest.py  docker-compose.yml  test_notebook.ipynb  test_notebooks.py
tests_notebooks/static/styles/: test.css
