[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    'error',
    'ignore::SyntaxError:vapory',
    'ignore::DeprecationWarning:vapory',
    'ignore::SyntaxError:CifFile',
    'ignore::DeprecationWarning:CifFile',
    'ignore::DeprecationWarning:bokeh.core.property.primitive',
    'ignore:Creating AiiDA configuration:UserWarning:aiida',
    'ignore:crystal system:UserWarning:ase.io.cif',
    'ignore::DeprecationWarning:ase.atoms',
    # TODO: This comes from a transitive dependency of ipyoptimade
    # Remove this when this issue is addressed:
    # https://github.com/CasperWA/ipywidgets-extended/issues/85
    'ignore::DeprecationWarning:ipywidgets_extended',
    'ignore:metadata.*traitlets.traitlets.Unicode object:DeprecationWarning:traitlets',
    # For some reason we get this error, see
    # https://github.com/aiidalab/aiidalab-widgets-base/issues/551
    'ignore:Exception ignored in:pytest.PytestUnraisableExceptionWarning:_pytest',
    'ignore::DeprecationWarning:pytest_html',
    'ignore::DeprecationWarning:jupyter_client',
    'ignore::DeprecationWarning:selenium',
    'ignore::DeprecationWarning:pytest_selenium',
]

[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py39"


[tool.ruff.lint]
ignore = ["E501", "E402", "ARG002", "TRY003", "RUF001", "RUF012"]
select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "PLE",  # pylint error rules
  "PLW",  # pylint warning rules
  "PLC",  # pylint convention rules
  "RUF",  # ruff-specific rules
  "TRY",  # Tryceratops
  "UP"    # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001"]
"tests_notebooks/*" = ["ARG001"]
