[metadata]
name = aiidalab_widgets_base
version = attr: aiidalab_widgets_base.__version__
description = Reusable widgets for AiiDAlab applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-widgets-base
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyCifRW~=4.4
    aiida-core>=2.1,<3
    aiidalab>=21.11.2
    aiidalab-eln>=0.1.2,~=0.1
    ansi2html~=1.6
    ase~=3.18
    bokeh~=2.0
    humanfriendly~=10.0
    ipytree~=0.2
    traitlets~=5.9.0
    ipywidgets~=7.7
    widgetsnbextension<3.6.3
    more-itertools~=8.0
    pymysql~=0.9
    nglview~=3.0
    spglib>=1.14,<3
    vapory~=0.1.2
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    bumpver~=2023.1129
    pgtest~=1.3
    pre-commit~=3.5
    # NOTE: pytest-selenium currently incompatible with pytest>=7.2
    # Maybe could be made to work by installing 'py' dependency, see:
    # https://docs.pytest.org/en/7.4.x/changelog.html#pytest-7-2-0-2022-10-23
    pytest~=7.1.0
    pytest-cov~=4.0
    pytest-docker~=2.0
    pytest-selenium~=4.0
    pytest-timeout~=2.2
    selenium~=4.7.0
    webdriver-manager~=3.8
optimade =
    ipyoptimade~=0.1
smiles =
    rdkit>=2021.09.2
    scikit-learn~=1.1
docs =
    sphinx
    sphinx-design
    pydata-sphinx-theme
    myst-nb

[bumpver]
current_version = "v2.2.0a0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab_widgets_base/__init__.py =
    __version__ = "{pep440_version}"
