[metadata]
name = aiidalab_widgets_base
version = attr: aiidalab_widgets_base.__version__
description = Reusable widgets for AiiDAlab applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-widgets-base
author = The AiiDAlab team
author_email = aiidalab@materialscloud.org
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    PyCifRW~=4.4
    aiida-core>=2.1,<3
    aiidalab>=21.11.2
    ansi2html~=1.6
    ase~=3.18,<3.23
    bokeh~=2.0
    humanfriendly~=10.0
    ipytree~=0.2
    traitlets~=5.4
    ipywidgets~=7.7,<9
    pymysql~=0.9
    nglview~=3.0
    spglib>=1.14,<3
    vapory~=0.1.2
    pandas~=2.1
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    bumpver>=2023.1129
    pgtest~=1.3
    pre-commit>=3.5
    pytest~=8.3.0
    pytest-cov~=5.0
    pytest-docker~=3.1.0
    pytest-selenium~=4.1.0
    pytest-timeout~=2.3.0
    selenium~=4.23.0
optimade =
    ipyoptimade==1.0.0
eln =
    aiidalab-eln>=0.1.2,~=0.1
    requests-cache~=1.0
smiles =
    rdkit>=2021.09.2
    scikit-learn~=1.1
docs =
    sphinx~=7.3
    sphinx-design~=0.5
    pydata-sphinx-theme~=0.15
    myst-nb~=1.1


[options.package_data]
aiidalab_widgets_base.static.styles = *.css

[bumpver]
current_version = "v2.3.0a3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab_widgets_base/__init__.py =
    __version__ = "{pep440_version}"
